# stress-kt-estimator

./: .gitignore  CLAUDE.md  README.md  SIGN_CONVENTION_FIX_SUMMARY.md  Taskfile.yml  kt_optimizer.spec  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/api/: __main__.py
app/api/routes/: index_routes.py  solver_routes.py
app/models/: api_models.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html
app/utils/: settings.py
docker/: Dockerfile  docker-compose.yml
kt_optimizer/: export_excel.py  logger.py  main.py  models.py  report.py  solver.py
kt_optimizer/ui/: main_window.py  result_panel.py  style.qss  table_model.py
tests/: test_api.py  test_export_excel.py  test_solver.py
