[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stress-kt-estimator"
version = "0.1.0"
description = "Conservative Kt optimizer prototype with GUI and reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.25",
  "pandas>=2.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "PySide6>=6.6",
  "xhtml2pdf>=0.2.13",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["kt_optimizer", "kt_optimizer.ui"]
